[package]
name = "ExposureBracketingOrganizer"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Boslx/ExposureBracketingOrganizer"

[dependencies]
eframe = "0.33.0"
egui = "0.33.0"
env_logger = "0.11.8"
rfd = "0.15.4"
log = "0.4.28"
rawler = "0.7.1"
chrono = "0.4.42"
num-rational = "0.4.2"
num-traits = "0.2.19"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
